<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_search_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <EditText
                    android:id="@+id/et_explore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/explore"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/iv_search" />

                <ImageView
                    android:id="@+id/iv_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:padding="10dp"
                    android:src="@drawable/ic_search" />

            </RelativeLayout>

            <TextView
                android:id="@+id/tv_header_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl_search_bar"
                android:layout_marginTop="10dp"
                android:paddingStart="20dp"
                android:textStyle="bold"
                android:text="@string/choose_category"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/tv_header_descp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_header_title"
                android:layout_marginTop="5dp"
                android:paddingStart="20dp"
                android:text="@string/perfect_way_to_start_your_day"
                android:textSize="14dp" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp" />


            <TextView
                android:id="@+id/tv_body_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingStart="20dp"
                android:textStyle="bold"
                android:text="@string/choose_your_coffee"
                android:textSize="20dp" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_body"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>